infra/k8s/worker-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: devops-ai
  labels:
    app: worker-service
    feature: k8s-terraform
    week: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: worker-service
        feature: k8s-terraform
        week: "2"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
      # Local (minikube daemon): image: worker-service:latest, imagePullPolicy: Never, sem imagePullSecrets
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: worker-service
          # Local (minikube daemon): image: worker-service:latest, imagePullPolicy: Never, sem imagePullSecrets
          image: ghcr.io/rubensrudio/worker-service:latest
          # Local (minikube daemon): image: worker-service:latest, imagePullPolicy: Never, sem imagePullSecrets
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
